fixing responsiveness on mobile with background positioning

--- a/src/components/pages/About/AboutHero.css
+++ b/src/components/pages/About/AboutHero.css
@@ -68,5 +68,6 @@
 @media screen and (max-width: 375px) {
   .about-hero-container {
     width: 100%;
+    height: 85vh;
   }
 }
